--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="quem">
         <header class="menu">
-            <a href="index.html"><img src="IMAGENS/html/LOGO CATALOGO 1.png" alt="logo"></a>
+            <a href="index.html"><img src="IMAGENS/LOGO CATALOGO 1.png" alt="logo"></a>
             <nav>
                 <ul>
                     <a href="">
@@ -127,11 +127,11 @@
         </script>
 
         <footer class="rodape">
-            <img src="IMAGENS/html/LOGO CATALOGO 1.png" alt="logo">
+            <img src="IMAGENS/LOGO CATALOGO 1.png" alt="logo">
             <div class="social">
-                <img src="IMAGENS/html/Group 1000001749.png" alt="" class="fotos">
-                <img src="IMAGENS/html/Group 1000001750.png" alt="" class="fotos">
-                <img src="IMAGENS/html/Group 1000001751.png" alt="" class="fotos">
+                <img src="IMAGENS/Group 1000001749.png" alt="" class="fotos">
+                <img src="IMAGENS/Group 1000001750.png" alt="" class="fotos">
+                <img src="IMAGENS/Group 1000001751.png" alt="" class="fotos">
             </div>
             <p class="direitos">Copyright © 2023 LLS | All Rights Reserved </p>
         </footer>
