--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <div class="quem">
         <header class="menu">
-            <a href="index.html"><img src="IMAGENS/LOGO CATALOGO 1.png" alt="logo"></a>
+            <a href="https://lauraspereira.github.io/moverse/"><img src="IMAGENS/LOGO CATALOGO 1.png" alt="logo"></a>
             <nav>
                 <ul>
-                    <a href="">
+                    <a href="https://leticiacastiglierii.github.io/moverse/">
                         <li>SOBRE NÓS</li>
                     </a>
-                    <a href="">
+                    <a href="https://sophiasmonteiro.github.io/catalogopoup/">
                         <li>CATÁLOGO</li>
                     </a>
-                    <a href="contato.html">
+                    <a href="https://lauraspereira.github.io/moverse/contato.html">
                         <li>CONTATO</li>
                     </a>
                 </ul>
